--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 
-<!-- Vamshi - adding comment here on 16/03/2017 at around 8 PM -->
+<!-- Vamshi - adding comment here on 16/03/2017 at around 8 PM , on thursday -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
